fix:refactor mapper by BaseResponse and ExtendResponse